# codeoff

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/agent/codex/: Cargo.toml
crates/agent/codex/src/: lib.rs  scheduled.rs  scheduled_artifacts.rs  scheduled_mcp.rs
crates/agent/codex/tests/fixtures/: dynamic-tool-app-server.sh  hostile-process-tree-app-server.sh  process-tree-app-server.sh
crates/agent/contract/: Cargo.toml
crates/agent/contract/src/: lib.rs
crates/channel/contract/: Cargo.toml
crates/channel/contract/src/: address.rs  capabilities.rs  connector.rs  context.rs  error.rs  event.rs  lib.rs  message.rs
crates/channel/contract/tests/: contract_validation.rs
crates/channel/slack/: Cargo.toml
crates/channel/slack/src/: client.rs  config.rs  delivery.rs  error.rs  intake.rs  lib.rs  mention_filter.rs  normalize.rs  schedule_target.rs  scheduled_delivery.rs  socket_mode.rs  web_api.rs  worker.rs
crates/channel/slack/tests/: config_check.rs  delivery.rs  mention_filter.rs  payload_normalization.rs  schedule_target.rs  scheduled_delivery.rs  socket_mode_live.rs  socket_mode_worker.rs  web_api_addressing.rs  web_api_context.rs  web_api_resources.rs  web_api_stream.rs
crates/channel/slack/tests/fixtures/: app_mention.json  button_interaction.json  direct_message.json  message_bot_message.json  message_changed.json  message_channel_mentions_example.json  message_channel_without_target.json  message_deleted.json  message_group_mentions_example.json  message_hidden.json  message_mpim_mentions_example.json  slash_command.json  socket_envelope_app_mention.json  unsupported.json
crates/cli/: Cargo.toml
crates/cli/src/: command.rs  lib.rs  main.rs  observability.rs  run.rs  scheduled_codex.rs  scheduled_runner.rs  scheduler.rs
crates/cli/tests/: cli_commands.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  error.rs  lib.rs
crates/config/tests/: config_loading.rs
crates/core/: Cargo.toml
crates/core/src/: attested_capability.rs  lib.rs  scheduled_identity.rs  scheduler_policy.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: jsonrpc.rs  lib.rs  server.rs  tools.rs
crates/mcp/tests/: dispatcher.rs  tcp_server.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: channel_tools.rs  lib.rs  schedule_audit.rs  schedule_authorization.rs  schedule_contract.rs  schedule_resolution.rs  schedule_service.rs  schedule_tools.rs  scheduled_delivery.rs  scheduled_execution.rs  scheduled_remote_protocol.rs  scheduled_remote_session.rs  scheduled_runner_broker.rs  scheduled_runner_control.rs  scheduled_runner_evidence.rs  scheduled_runner_executor.rs  scheduled_runner_grant.rs  scheduled_runner_tls.rs  scheduled_runner_tls_integration_tests.rs  scheduler_observability.rs
crates/runtime/tests/: channel_tools.rs  schedule_tools.rs  scheduled_delivery.rs  scheduled_runner_tls.rs  slack_dispatch.rs
crates/state/: Cargo.toml
crates/state/migrations/: 20260711000000_foundation.sql  20260713000000_slack_source_events.sql  20260713000001_channel_event_queue_failure.sql  20260713010000_slack_delivery.sql  20260713030000_agent_drafts.sql  20260715000000_slack_delivery_senders.sql  20260716000000_channel_conversations.sql  20260716010000_slack_stream_processing.sql  20260716020000_context_reliability.sql  20260716030000_channel_conversation_summaries.sql  20260721000000_scheduler.sql  20260721010000_schedule_mutation_audit.sql  20260721020000_scheduler_execution.sql  20260721030000_scheduler_execution_hardening.sql  20260721040000_scheduler_delivery_intents.sql  20260722000000_scheduler_delivery_authority.sql  20260722010000_scheduler_delivery_readiness.sql  20260722020000_scheduler_operator.sql  20260722030000_scheduler_operator_target_bounds.sql  20260722040000_scheduler_run_retry_reason.sql  20260722050000_scheduler_operator_reason_authority.sql  20260722060000_scheduler_operator_delivery_resolution_authority.sql  20260722070000_scheduler_observability.sql  20260722080000_scheduler_retention.sql  20260722090000_scheduler_delivery_retention_completion.sql  20260722100000_scheduler_delivery_retention_null_safety.sql  20260722110000_scheduled_executor_authority.sql  20260722120000_scheduled_executor_permit_retention.sql  20260722130000_scheduler_operational_policy.sql  20260722140000_scheduler_cadence_proof.sql  20260722150000_scheduler_transition_metrics.sql  20260722160000_scheduler_telemetry_authority.sql  20260722170000_scheduler_telemetry_retention.sql
crates/state/src/: error.rs  lib.rs  scheduler.rs  store.rs
crates/state/src/scheduler/: delivery.rs  store.rs  timezone.rs
crates/state/tests/: scheduler_state.rs  state_store.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
docs/: README.md
docs/channel-gateway/: README.md
docs/channel-gateway/en/: agents.md  channels.md  codex-app-server.md  deployment.md  observability.md  overview.md  roadmap.md  runtime.md  slack-connector.md
docs/channel-gateway/zh-TW/: agents.md  channels.md  codex-app-server.md  deployment.md  observability.md  overview.md  roadmap.md  runtime.md  slack-app-setup-runbook.md  slack-connector.md
docs/engineering/: coding-standards.md
scripts/: codex-schema-hash.py
