[workspace]
resolver = "3"
members = [
  "crates/core",
  "crates/config",
  "crates/state",
  "crates/agent/contract",
  "crates/agent/codex",
  "crates/channel/contract",
  "crates/channel/slack",
  "crates/runtime",
  "crates/mcp",
  "crates/cli",
  "crates/test-support",
]

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/fewensa/codeoff"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
assert_cmd = "2"
chrono = "0.4"
chrono-tz = "0.10.4"
clap = { version = "4", features = ["derive"] }
croner = "3.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
