[package]
name = "codeoff-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "codeoff"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
clap.workspace = true
chrono.workspace = true
codeoff-config = { path = "../config" }
codeoff-agent-contract = { path = "../agent/contract" }
codeoff-agent-codex = { path = "../agent/codex" }
codeoff-channel-contract = { path = "../channel/contract" }
codeoff-channel-slack = { path = "../channel/slack" }
codeoff-mcp = { path = "../mcp" }
codeoff-runtime = { path = "../runtime" }
codeoff-state = { version = "0.1.0", path = "../state" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "time"] }
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates = "3"
tempfile.workspace = true

[lints]
workspace = true
