[package]
name = "codeoff-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
codeoff-channel-contract = { path = "../channel/contract" }
codeoff-runtime = { path = "../runtime" }
codeoff-state = { path = "../state" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "net"] }

[dev-dependencies]
async-trait = "0.1"
codeoff-config = { path = "../config" }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
