[package]
name = "codeoff-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
codeoff-agent-contract = { path = "../agent/contract" }
codeoff-agent-codex = { path = "../agent/codex" }
codeoff-channel-contract = { path = "../channel/contract" }
codeoff-config = { path = "../config" }
codeoff-state = { path = "../state" }
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[dev-dependencies]
codeoff-state = { path = "../state", features = ["test-support"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }

[lints]
workspace = true
