[package]
name = "codeoff-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[features]
test-support = []

[dependencies]
chrono.workspace = true
codeoff-channel-contract = { path = "../channel/contract" }
codeoff-core = { path = "../core" }
croner.workspace = true
jiff.workspace = true
jiff-tzdb.workspace = true
serde_json = "1"
sha2.workspace = true
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
thiserror.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
