[package]
name = "codeoff-agent-codex"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
codeoff-agent-contract = { path = "../contract" }
codeoff-config = { path = "../../config" }
codeoff-core = { path = "../../core" }
nix.workspace = true
ring.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
codeoff-state = { path = "../../state", features = ["test-support"] }
tempfile.workspace = true

[lints]
workspace = true
