[package]
name = "codeoff-channel-slack"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
codeoff-channel-contract = { path = "../contract" }
codeoff-config = { path = "../../config" }
codeoff-runtime = { path = "../../runtime" }
codeoff-state = { path = "../../state" }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "stream"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
codeoff-state = { path = "../../state", features = ["test-support"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
